# dolphin-rs

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
axum-demo/: Cargo.toml  build.rs
axum-demo/proto/: hello_world.proto
axum-demo/src/: main.rs  multiplex_service.rs
axum-demo/src/pb/: helloworld.rs
celery-demo/: Cargo.toml
celery-demo/src/: producer.rs
dolphin-api/: .env  Cargo.toml  dolphin-api.rest  log4rs.yaml
dolphin-api-v1/: .env  .gitignore  Cargo.toml  dolphin-api.rest
dolphin-api-v1/api/: Cargo.toml
dolphin-api-v1/api-core/: Cargo.toml
dolphin-api-v1/api-core/src/: lib.rs  user_service.rs
dolphin-api-v1/api/src/: lib.rs  login.rs  user.rs
dolphin-api-v1/src/: main.rs
dolphin-api-v1/src/api/: login.rs  mod.rs  user.rs
dolphin-api-v1/src/api_core/: mod.rs
dolphin-api-v2/: Cargo.toml
dolphin-api-v2/examples/: quick_dev.rs
dolphin-api-v2/src/: main.rs
dolphin-api-v2/src/ctx/: mod.rs
dolphin-api-v2/src/tests/: authenticator.rs  rpc_client.rs
dolphin-api-v2/src/web/: mod.rs  routes_user.rs
dolphin-api/entity/: Cargo.toml
dolphin-api/entity/src/: lib.rs  qrtz_blob_triggers.rs  qrtz_calendars.rs  qrtz_cron_triggers.rs  qrtz_fired_triggers.rs  qrtz_job_details.rs  qrtz_locks.rs  qrtz_paused_trigger_grps.rs  qrtz_scheduler_state.rs  qrtz_simple_triggers.rs  qrtz_simprop_triggers.rs  qrtz_triggers.rs  t_ds_access_token.rs  t_ds_alert.rs  t_ds_alert_plugin_instance.rs  t_ds_alert_send_status.rs  t_ds_alertgroup.rs  t_ds_audit_log.rs  t_ds_command.rs  t_ds_datasource.rs  t_ds_dq_comparison_type.rs  t_ds_dq_execute_result.rs  t_ds_dq_rule.rs  t_ds_dq_rule_execute_sql.rs  t_ds_dq_rule_input_entry.rs  t_ds_dq_task_statistics_value.rs  t_ds_environment.rs  t_ds_environment_worker_group_relation.rs  t_ds_error_command.rs  t_ds_k8s.rs  t_ds_k8s_namespace.rs  t_ds_plugin_define.rs  t_ds_process_definition.rs  t_ds_process_definition_log.rs  t_ds_process_instance.rs  t_ds_process_task_relation.rs  t_ds_process_task_relation_log.rs  t_ds_project.rs  t_ds_queue.rs  t_ds_relation_datasource_user.rs  (+20 more)
dolphin-api/examples/: demo.rs  logmiddel.rs
dolphin-api/src/: diesel_postgres.rs  main.rs
dolphin-api/src/aspect/: jwtmiddleware.rs  login_aspect.rs  mod.rs
dolphin-api/src/controller/: users.rs
dolphin-api/src/dto/: user.rs
dolphin-api/src/service/: user_service.rs
dolphin-common/: Cargo.toml
dolphin-common/src/: lib.rs
dolphin-common/src/core_error/: error.rs
dolphin-common/src/core_results/: results.rs
dolphin-common/src/core_status/: app_status.rs  mod.rs
dolphin-common/src/enums/: AlertStatus.rs  AlertType.rs  AuditOperationType.rs  AuditResourceType.rs  AuthorizationType.rs  BlockingOpportunity.rs  CacheType.rs  CommandType.rs  ConditionType.rs  DbConnectType.rs  PluginType.rs  ProcessExecutionTypeEnum.rs  ProfileType.rs  RunMode.rs  SparkVersion.rs  SqoopJobType.rs  SqoopQueryType.rs  StateEventType.rs  TaskDependType.rs  TaskGroupQueueStatus.rs  TimeoutFlag.rs  UdfType.rs  UserType.rs  WarningType.rs
dolphin-config/: .env  Cargo.toml
dolphin-config/api-config/: default.toml
dolphin-config/dao-config/: default.toml
dolphin-config/src/: lib.rs
dolphin-config/src/api_config/: mod.rs
dolphin-config/src/dao_config/: mod.rs
dolphin-dao/: .env  .gitignore  Cargo.toml
dolphin-dao/src/: client.rs  server.rs
dolphin-dao/src/service/: dao_service.rs  ds_access_token.rs  ds_alert.rs  ds_alert_plugin_instance.rs  ds_alert_send_status.rs  ds_alertgroup.rs  ds_audit_log.rs  ds_command.rs  ds_datasource.rs  ds_dq_comparison_type.rs  ds_dq_execute_result.rs  ds_dq_rule.rs  ds_dq_rule_execute_sql.rs  ds_dq_rule_input_entry.rs  ds_dq_task_statistics_value.rs  ds_environment.rs  ds_environment_worker_group_relation.rs  ds_error_command.rs  ds_k8s.rs  ds_k8s_namespace.rs  ds_plugin_define.rs  ds_process_definition.rs  ds_process_definition_log.rs  ds_process_instance.rs  ds_process_task_relation.rs  ds_process_task_relation_log.rs  ds_project.rs  ds_queue.rs  ds_relation_datasource_user.rs  ds_relation_namespace_user.rs  ds_relation_process_instance.rs  ds_relation_project_user.rs  ds_relation_resources_user.rs  ds_relation_rule_execute_sql.rs  ds_relation_rule_input.rs  ds_relation_rule_input_entry.rs  ds_relation_udfs_user.rs  ds_resources.rs  ds_schedules.rs  ds_session.rs  (+24 more)
dolphin-db/: Cargo.toml
dolphin-db/src/: lib.rs
dolphin-db/src/datasources/: mod.rs
dolphin-db/src/models/: mod.rs  user.rs  work_server.rs
dolphin-db/src/resources/: AccessTokenMapper.xml  AlertMapper.xml  AlertPluginInstanceMapper.xml  AuditLogMapper.xml  CommandMapper.xml  DataSourceMapper.xml  DataSourceUserMapper.xml  DqComparisonTypeMapper.xml  DqExecuteResultMapper.xml  DqExecuteSqlMapper.xml  DqRuleInputEntryMapper.xml  DqRuleMapper.xml  DqTaskStatisticsValueMapper.xml  EnvironmentMapper.xml  EnvironmentWorkerGroupRelationMapper.xml  ErrorCommandMapper.xml  K8sNamespaceMapper.xml  K8sNamespaceUserMapper.xml  PluginDefineMapper.xml  ProcessDefinitionLogMapper.xml  ProcessDefinitionMapper.xml  ProcessInstanceMapMapper.xml  ProcessInstanceMapper.xml  (+20 more)
dolphin-entity/: .gitignore  Cargo.toml
dolphin-entity/src/: convert.rs  prelude.rs  qrtz_blob_triggers.rs  qrtz_calendars.rs  qrtz_cron_triggers.rs  qrtz_fired_triggers.rs  qrtz_job_details.rs  qrtz_simprop_triggers.rs  t_ds_access_token.rs  t_ds_alert.rs  t_ds_alert_send_status.rs  t_ds_audit_log.rs  t_ds_command.rs  t_ds_dq_execute_result.rs  t_ds_dq_rule.rs  t_ds_dq_rule_execute_sql.rs  t_ds_dq_rule_input_entry.rs  t_ds_dq_task_statistics_value.rs  t_ds_environment.rs  t_ds_process_definition_log.rs  t_ds_process_task_relation.rs  t_ds_project.rs  t_ds_queue.rs  t_ds_relation_datasource_user.rs  t_ds_relation_namespace_user.rs  t_ds_relation_project_user.rs  t_ds_relation_resources_user.rs  t_ds_resources.rs  t_ds_task_definition_log.rs  t_ds_task_group_queue.rs  t_ds_task_instance.rs  t_ds_tenant.rs  t_ds_udfs.rs  t_ds_user.rs  t_ds_worker_group.rs
dolphin-proto/: Cargo.toml  build.rs
dolphin-proto/proto/: t_ds_user.proto
dolphin-proto/src/: lib.rs
(+198 files in other folders)
