[workspace]
resolver = "2"

members = [
    # ".",
    # "dolphin-alert",
    # "dolphin-api",
    # "dolphin-db",
    # "axum-demo",
    # "tonic-example",
    # "celery-demo",
    # "yaml_demo",
    # "rust-simple-code-layout",
    "dolphin-api-v1",
    "dolphin-dao",
    "dolphin-entity",
    "dolphin-proto",
    "dolphin-common",
    "dolphin-config",
]


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...' # Platform-specific.
debug-assertions = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false       # when possible

[profile.release.build-override]
opt-level = 0
codegen-units = 256
