[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["headers"] }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
prost = "0.11.6"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tonic = "0.9.0"
tonic-reflection = "0.9.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tower_governor = { version = "0.0.4", features = ["tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.9.0", features = ["prost"] }
