[package]
name = "celery-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "producer"
path = "src/producer.rs"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
celery = "0.5.0"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.29.1", features = ["full"] }
