[package]
name = "dolphin-api-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["api", "api-core", "utils"]
[dependencies]
# axum = "0.6.20"
# jsonwebtoken = "8.3.0"
# log = "0.4.20"
# log4rs = "1.2.0"
# serde = { version = "1.0.183", features = ["derive"] }
# tokio = { version = "1.31.0", features = ["full"] }
api = { path = "./api" }
api-core = { path = "./api-core" }
serde_json = "1.0.105"
