[package]
name = "dolphin-api-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["api", "api-core", "utils"]
[dependencies]
# axum = "0.6.20"
# jsonwebtoken = "8.3.0"
# log = "0.4.20"
# log4rs = "1.2.0"
# serde = { version = "1.0.183", features = ["derive"] }
# tokio = { version = "1.31.0", features = ["full"] }
api = { path = "./api" }
api-core = { path = "./api-core" }
regex = "1.9.4"
serde_json = "1.0.105"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false





[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false # when possible

[profile.release.build-override]
opt-level = 0
codegen-units =256
