[package]
name = "dolphin-api-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.ht
[dependencies]

regex = "1.9.4"
serde_json = "1.0.105"
tokio = { version = "1.31.0", features = ["full"] }
anyhow = "1.0.44"
dotenvy = "0.15.7"
axum = { version = "0.6.20", features = ["headers", "tracing", "macros"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.183", features = ["derive"] }
once_cell = "1.18.0"
tower = { version = "0.4.13", features = ["full"] }
tower_governor = { version = "0.0.4", features = ["tracing"] }
tower-cookies = "0.9.0"
lazy_static = "1.4.0"
proto = { path = "../dolphin-proto", package = "dolphin-proto" }
serde_with = { version = "3.3.0", features = ["json"] }
tonic = "0.9.2"
dolphin_common = { path = "../dolphin-common", package = "dolphin-common" }
struct-convert = "1.2.9"
dolphin_config = { path = "../dolphin-config", package = "dolphin-config" }
async-trait = "0.1.73"
md5 = "0.7.0"
futures = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
