[package]
name = "dolphin-api-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde_with = "3.3.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
dolphin_common = { path = "../dolphin-common", package = "dolphin-common" }
dolphin_proto = { path = "../dolphin-proto", package = "dolphin-proto" }
dolphin_config = { path = "../dolphin-config", package = "dolphin-config" }
tonic = "0.9.2"
tower = { version = "0.4.13", features = ["full"] }
anyhow = "1.0.75"
once_cell = "1.18.0"
md5 = "0.7.0"
struct-convert = "1.2.9"
tower-cookies = "0.9.0"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
