[package]
name = "dolphin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
    "json",
] }
schemars = "0.8.10"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
serde = "1.0.159"
tokio = { version = "1.27.0", features = ["full"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
serde_json = "1.0.70"
serde_derive = "1.0.159"
