[package]
name = "dolphin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
# rocket_contrib = "0.4.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
md5 = "0.7.0"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = [
    "diesel_sqlite_pool",
    "sqlite_pool",
] }
# rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
rocket_sync_db_pools_codegen = "0.1.0-rc.3"
# rocket_db_pools_codegen = "0.1.0-rc.3"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
rusqlite = "0.27.0"
