[package]
name = "dolphin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
# diesel = { version = "2.1.0", features = ["r2d2", "postgres"] }
dotenv = "0.15.0"
# env_logger = "0.10.0"
rbatis = { version = "4.3.0", features = [
    "debug_mode",
    "rbatis-macro-driver",
    "rbdc",
] }
rbdc = "4.3.1"
rbdc-pg = { version = "4.3.0", features = ["rbdc"] }
rbs = "4.3.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serde_json = "1.0.95"
# tokio-pg-mapper = "0.2.0"
# tokio-pg-mapper-derive = "0.2.0"
# tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
uuid = { version = "1.3.0", features = ["v4"] }

dolphin-db = { path = "../dolphin-db", features = ["postgres"] }
log4rs = "1.2.0"
log = "0.4.17"
futures-util = "0.3.28"
bytes = "1.4.0"
jsonwebtoken = "8.3.0"
futures = "0.3.28"
