[package]
name = "dolphin-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cn_msg"]
cn_msg = []
en_msg = []


[dependencies]
axum = "0.6.20"
regex = "1.9.4"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
