[package]
name = "dolphin-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
config = { version = "0.13.3", features = ["toml"] }
serde_derive = "1.0.188"
serde = { version = "1.0.188", features = ["derive"] }
