[package]
name = "dolphin-dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
[dependencies]
anyhow = "1.0.75"
# prost = "0.11.9"
# prost-types = "0.11.9"
sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "serde_json",
] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
entity = { version = "0.1.0", path = "../dolphin-entity", package = "dolphin-entity" }
proto = { version = "0.1.0", path = "../dolphin-proto", package = "dolphin-proto" }
dolphin_common = { version = "0.1.0", path = "../dolphin-common", package = "dolphin-common" }
serde_json = "1.0.105"
chrono = "0.4.26"
config = "0.13.3"
dolphin_config = { version = "0.1.0", path = "../dolphin-config", package = "dolphin-config" }

# [build-dependencies]
# prost-build = "0.11.9"
# tonic-build = "0.9.2"
[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"
