[package]
name = "dolphin-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = []
sqlite = []
mysql = []
sqlserver = []

[dependencies]
rbdc = "4.3.1"
rbatis = { version = "4.3.0", features = [
    "debug_mode",
    "rbatis-macro-driver",
    "rbdc",
] }
rbdc-pg = { version = "4.3.0", features = ["rbdc"] }
rbdc-sqlite = { version = "4.3" }
rbdc-mysql = { version = "4.3" }
rbdc-mssql = { version = "4.3" }
rbs = "4.3.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serde_json = "1.0.95"
