[package]
name = "dolphin-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


sea-orm = { version = "0.12.2", features = ["sqlx-postgres"] }
serde = { version = "1.0.183", features = ["derive"] }
proto = { version = "0.1.0", path = "../dolphin-proto", package = "dolphin-proto" }
serde_json = "1.0.105"
dolphin_common = { version = "0.1.0", path = "../dolphin-common", package = "dolphin-common" }
