[package]
name = "api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
# async-once-cell = "0.5.3"
# once_cell = "1.18.0"

proto = { path = "../../dolphin-proto", package = "dolphin-proto" }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_with = { version = "3.3.0", features = ["json"] }
tokio = { version = "1.32.0", features = ["sync"] }
tonic = "0.9.2"
dolphin_common = { path = "../../dolphin-common", package = "dolphin-common" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
struct-convert = "1.2.9"
dolphin_config = { path = "../../dolphin-config", package = "dolphin-config" }
async-trait = "0.1.73"
md5 = "0.7.0"
futures = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
