[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["full"] }
anyhow = "1.0.44"
dotenvy = "0.15.7"
axum = { version = "0.6.20", features = ["headers", "tracing", "macros"] }
api-core = { path = "../api-core" }
utils = { path = "../utils" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
# headers = "0.3.8"
# futures = "0.3.28"
# hyper = { version = "0.14.27", features = ["full"] }
# lazy_static = "1.4.0"
# tonic = "0.9.0"
# tonic-reflection = "0.9.0"
tower = { version = "0.4.13", features = ["full"] }
# tower-http = { version = "0.4.0", features = ["trace"] }
tower_governor = { version = "0.0.4", features = ["tracing"] }
tower-cookies = "0.9.0"
